# ceres-workshop

./: .buildinfo  .flake8  .gitignore  README.rst  conda-lock.yml  environment.yml  genindex.html  getting_started.html  git.html  glossary.html  guides.html  index.html  introduction.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  python.html  resources.html  search.html  searchindex.js  task_1.html  task_2.html  task_3.html  warmup.html
.doctrees/: environment.pickle  getting_started.doctree  git.doctree  glossary.doctree  guides.doctree  index.doctree  introduction.doctree  python.doctree  resources.doctree  task_1.doctree  task_2.doctree  task_3.doctree  warmup.doctree
.doctrees/python/: packaging.doctree  venv.doctree
.doctrees/task_1/: complex_numbers.doctree  extension.doctree  finishing_up.doctree  getting_started.doctree  grading.doctree  main_task.doctree
.doctrees/task_2/: extension.doctree  finishing_up.doctree  getting_started.doctree  grading.doctree  main_task.doctree
.doctrees/task_3/: extension.doctree  finishing_up.doctree  getting_started.doctree  main_task.doctree
.github/workflows/: build_pages.yaml  grade_task_1.yaml  grade_task_2.yaml  test_package.yml
_sources/: index.rst.txt  task_1.rst.txt
_sources/task_1/: extension.rst.txt  getting_started.rst.txt  grading.rst.txt  main_task.rst.txt
_sources/task_2/: finishing_up.rst.txt  grading.rst.txt
ceres_workshop/: __init__.py
ceres_workshop/fractals/: README.rst  fractals.py
ceres_workshop/grading/: grade_task_2.py
ceres_workshop/task_1/: __init__.py  (+3 more)
data/: README.rst
grading/: README.rst  common.py  conftest.py  grade_task_1.py  grade_task_2.py  grade_task_3.py  test_task_1.py  test_task_2.py  utils.py
pages/: conf.py  getting_started.rst  glossary.rst  guides.rst  index.rst  introduction.rst  python.rst  resources.rst  task_1.rst  task_2.rst  task_3.rst  warmup.rst
python/: packaging.html  venv.html
task-1/: README.rst  gif.py  julia.py  mandelbrot.py  test_quadratic_map.py  test_utils.py
task_1/: complex_numbers.html  extension.html  finishing_up.html  getting_started.html  grading.html  main_task.html
task_2/: extension.html  finishing_up.html  getting_started.html  grading.html  main_task.html
task_3/: extension.html  finishing_up.html  getting_started.html  main_task.html
tasks/task_3/: README.rst  pyproject.toml
tasks/task_3/notebooks/: checks.ipynb  test_best_model.ipynb  train_classifier.ipynb
tasks/task_3/notebooks/lightning_logs/version_0/: events.out.tfevents.1661888931.xps.102286.0  events.out.tfevents.1661888936.xps.102286.1  hparams.yaml
tasks/task_3/shipsnet/: __init__.py  data.py  models.py  viz.py
(+43 files in other folders)
