[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ceres_workshop"
authors = [{name = "Joe Marsh Rossney", email = "17361029+marshrossney@users.noreply.github.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/marshrossney/ceres-workshop"
Docs = "https://marshrossney.github.io/ceres-workshop"

[tool.black]
line-length = 79
target-version = ["py39"]
