[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shipsnet"
authors = [{name = "Joe Marsh Rossney", email = "17361029+marshrossney@users.noreply.github.com"}]
readme = "README.rst"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/marshrossney/ceres-workshop"
